@@ -9,6 +9,7 @@ import model.Food;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import DAO.FoodDAOimpl;
 
@@ -45,9 +46,8 @@ public class SearchServlet extends HttpServlet {
 
 		List<Food> result = foodao.searchAdvanced(keyword, categoryId, minPrice, maxPrice);
 		// gợi ý 5 tên liên quan
-		List<Food>suggest = foodao.findByName(keyword).stream().limit(5).toList();
+		List<Food> suggest = foodao.findByName(keyword).stream().limit(5).collect(Collectors.toList());
 		request.setAttribute("foodlist", result);
-
 		request.setAttribute("suggestList", suggest);
 		request.getRequestDispatcher("/views/jsp/Trangchu.jsp").forward(request, response);
 	}
